feat: harden Hyperion exercise generation